force-app/main/default/objects/Accounts_with_Unified_Details__c/Accounts_with_Unified_Details__c.object-meta.xml
<CustomObject>
    <label>Accounts with Unified Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts with Unified Detailss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>