force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>