force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>