force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>