force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/source_object__c.field-meta.xml
<CustomField>
    <fullName>source_object__c</fullName>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>