force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/unified_id__c.field-meta.xml
<CustomField>
    <fullName>unified_id__c</fullName>
    <label>Unified Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>