force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/unified_name__c.field-meta.xml
<CustomField>
    <fullName>unified_name__c</fullName>
    <label>Unified Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>