force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/unified_number__c.field-meta.xml
<CustomField>
    <fullName>unified_number__c</fullName>
    <label>Unified Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>