force-app/main/default/objects/Accounts_with_Unified_Details__c/fields/unified_type__c.field-meta.xml
<CustomField>
    <fullName>unified_type__c</fullName>
    <label>Unified Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>